# lazytmux

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  pyproject.toml
.github/workflows/: ci.yml
cmake/: LazytmuxCoverage.cmake  LazytmuxSanitizers.cmake  LazytmuxWarnings.cmake
examples/: ui_vertical_slice.cpp  ui_vertical_slice.hpp
include/lazytmux/: cli.hpp  cli_commands.hpp  colors.hpp  config.hpp  error.hpp  exec.hpp  filter.hpp  frecency.hpp  frecency_rank.hpp  frecency_store.hpp  nesting.hpp  proc.hpp  templates.hpp  version.hpp  zoxide.hpp
include/lazytmux/cmdmode/: commands.hpp  parse.hpp
include/lazytmux/io/: process.hpp
include/lazytmux/snapshots/: list.hpp  ops.hpp  restore.hpp  timestamp.hpp
include/lazytmux/tmux/: commands.hpp  discovery.hpp  ids.hpp  parse.hpp  run.hpp  socket.hpp  types.hpp
scripts/: build.sh  configure.sh  coverage.sh  format.sh  presets.sh  test.sh
src/: cli.cpp  cli_commands.cpp  colors.cpp  config.cpp  error.cpp  exec.cpp  filter.cpp  frecency.cpp  frecency_rank.cpp  frecency_store.cpp  main.cpp  nesting.cpp  proc.cpp  templates.cpp  version.cpp  zoxide.cpp
src/cmdmode/: commands.cpp  parse.cpp
src/io/: process.cpp
src/snapshots/: list.cpp  ops.cpp  restore.cpp  timestamp.cpp
src/tmux/: commands.cpp  discovery.cpp  ids.cpp  parse.cpp  run.cpp  socket.cpp
tests/: test_cli.cpp  test_cli_commands.cpp  test_cmdmode.cpp  test_colors.cpp  test_config.cpp  test_error.cpp  test_exec.cpp  test_filter.cpp  test_frecency.cpp  test_frecency_rank.cpp  test_frecency_store.cpp  test_ftxui_smoke.cpp  test_ids.cpp  test_live_tmux.cpp  test_nesting.cpp  test_parse.cpp  test_proc.cpp  test_process.cpp  test_smoke.cpp  test_snapshot_list.cpp  test_snapshot_ops.cpp  test_snapshot_restore.cpp  test_socket.cpp  test_socket_discovery.cpp  test_templates.cpp  test_timestamp.cpp  test_tmux_commands.cpp  test_tmux_run.cpp  test_types.cpp  test_ui_vertical_slice.cpp  test_zoxide.cpp
